--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,97 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+body {
+  background-color: #282c34;
+}
+
+main {
+  width: 100%;
+  max-width: 800px;
+  min-height: 100vh;
+  margin: auto;
+}
+
+.container {
+  width: 100%;
+  height: 80vh;
+  margin: 10px auto;
+  border: 1px solid #555;
+  position: relative;
+}
+
+.video_input {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: wheat;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 2rem;
+  cursor: pointer;
+
+}
+
+.video_container {
+  width: 100%;
+  height: 100%;
+  background-color: #111;
+}
+
+.video_container video {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.video_close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 32px;
+  height: 32px;
+  background-color: crimson;
+  color: white;
+  cursor: pointer;
+  border: none;
+  font-weight: 800;
+}
+
+form .group {
+  width: 100%;
+  margin: 15px 0;
+  display: flex;
+  align-items: end;
+  gap: 10px;
+
+}
+
+form .group label {
+  color: white;
+}
+
+form .group label:first-child {
+  flex: 1;
+}
+
+form input[type='text'] {
+  width: 100%;
+  padding: 0 10px;
+  height: 45px;
+}
+
+form input[type='number'] {
+  width: 50px;
+  height: 45px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+form button {
+  height: 45px;
+  padding: 0 10px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
